fix h1 alignment

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -7,7 +7,8 @@ html {
 }
 
 h1 {
-    font-size: x-large;
+    font-size: 1.4em;
+    text-align: center;
     margin-left: 3%;
 }
 
@@ -83,4 +84,3 @@ h3 {
     width: inherit;
     padding: 5px;
 }
-
